merged with latest Marlin unsafe branch (0.9.4) + openjdk 17 fix